documentation for manual running the XML processor